fixed self align

--- a/nu-kenzie/src/pages/DashBoard/styles.module.css
+++ b/nu-kenzie/src/pages/DashBoard/styles.module.css
@@ -321,4 +321,7 @@
   .title1 {
     align-self: center;
   }
+  .title2 {
+    align-self: center;
+  }
 }
